# ysyx

./: .gitignore  .gitmodules  README.md  config_doc.md  proj_list.md  提问的智慧 感想.md
Lab1-Chooser/: Top.v  main.cpp
Lab2-Decoder/: README.md
Lab2-Encoder/: README.md
Lab2-Encoder/csrc/: main.cpp
Lab2-Encoder/vsrc/: Encode42.v
Lab3-Adder/: CMakeLists.txt  README.md
Lab3-Adder/constr/: top.nxdc
Lab3-Adder/vsrc/: Encode42.v  top.v
nvboard_demo_minimal_proj/: CMakeLists.txt  Makefile
nvboard_demo_minimal_proj/constr/: top.nxdc
nvboard_demo_minimal_proj/csrc/: main.cpp
nvboard_demo_minimal_proj/vsrc/: top.v
